updated Czech and German translation

--- a/po/wesnoth-anl/cs.po
+++ b/po/wesnoth-anl/cs.po
@@ -1,20 +1,20 @@
 # translation of wesnoth-anl.pot to Czech
 # Czech translations for Battle for Wesnoth package.
 # Český překlad hry Battle for Wesnoth (Bitva o Wesnoth).
-# Copyright (C) 2008 - 2010 Wesnoth development team
+# Copyright (C) 2008 - 2011 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
 #
 # Czech Wesnoth translation team <wesnoth-cs-l@nospam.buchtovi.cz>,
 #
 # Petr Šlejhar (Septim) <septim@centrum.cz>, 2008, 2009.
-# Vladimír Slávik <slavik.vladimir@seznam.cz>, 2008, 2009.
+# Vladimír Slávik <slavik.vladimir@seznam.cz>, 2008 - 2011.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-23 15:01+0100\n"
-"PO-Revision-Date: 2011-11-22 20:13+0100\n"
+"PO-Revision-Date: 2011-12-11 13:11+0100\n"
 "Last-Translator: VladimírSlávik <slavik.vladimir@nospam@seznam.cz>\n"
 "Language-Team: Czech <wesnoth-cs-l@nospam.buchtovi.cz>\n"
 "Language: cs\n"
@@ -122,9 +122,6 @@ msgstr ""
 "U pavoučích hnízd na severu či jihu se něco stalo jednomu z našich "
 "pracovníků."
 
-# | msgid ""
-# | "I swear I saw somebody trapped in the spider’s web. Maybe we should "
-# | "rescue them?"
 #. [message]: type=Peasant
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:591
 msgid ""
