--- a/po/wesnoth-help/de.po
+++ b/po/wesnoth-help/de.po
@@ -1253,13 +1253,13 @@ msgstr ""
 #. [topic]: id=orbs
 #: data/core/help.cfg:180
 msgid " green if it hasn’t moved this turn,"
-msgstr "grün, wenn die Einheit in diesem Zug nicht bewegt wurde,"
+msgstr " grün, wenn die Einheit in diesem Zug nicht bewegt wurde,"
 
 #. [topic]: id=orbs
 #: data/core/help.cfg:181
 msgid " yellow if it has moved, but could still move further or attack, or"
 msgstr ""
-"gelb, wenn die Einheit während dieses Zuges bereits bewegt wurde, aber noch "
+" gelb, wenn die Einheit während dieses Zuges bereits bewegt wurde, aber noch "
 "weiter bewegt werden oder angreifen könnte oder"
 
 #. [topic]: id=orbs
@@ -1272,7 +1272,7 @@ msgstr ""
 #: data/core/help.cfg:183
 msgid " blue if the unit is an ally you do not control."
 msgstr ""
-"blau, wenn die Einheit ein Verbündeter ist, die Ihr nicht ziehen könnt."
+" blau, wenn die Einheit ein Verbündeter ist, die Ihr nicht ziehen könnt."
 
 #. [topic]: id=orbs
 #: data/core/help.cfg:184
@@ -4905,15 +4905,16 @@ msgstr ""
 "Rasse für sich erringen wollen.\n"
 "\n"
 "<header>text='Geographie'</header>\n"
-"Ursprünglich stammen Draken von der Insel Morogor mitten im Großen Ozean. "
-"Doch haben sich, da die Insel schon seit Jahrhunderten langsam im Meer "
-"versinkt, langsam Kolonien der Draken auf dem Großen Kontinent gebildet. "
-"Bevorzugt lassen sich Draken in Höhlen in den Bergen nahe Vulkanen nieder, "
-"wo sie ihre Eier, Brutstätten und Schmieden am besten schützen können. Zwar "
-"bevorzugen sie die Hitze, doch hält ihr inneres Feuer die Draken auch in "
-"einem recht kalten Klima am Leben. In Folge dessen war es ihnen sogar "
-"möglich, einige Gebirge im fernen und eisigen Norden des Großen Kontinents "
-"zu bevölkern."
+"Ursprünglich stammen Draken von der Insel <ref>dst='morogor' text='Morogor'</"
+"ref> mitten im <ref>dst='great_ocean' text='Großen Ozean'</ref>. Doch haben "
+"sich, da die Insel schon seit Jahrhunderten langsam im Meer versinkt, "
+"langsam Kolonien der Draken auf dem <ref>dst='great_continent' text='Großen "
+"Kontinent'</ref> gebildet. Bevorzugt lassen sich Draken in Höhlen in den "
+"Bergen nahe Vulkanen nieder, wo sie ihre Eier, Brutstätten und Schmieden am "
+"besten schützen können. Zwar bevorzugen sie die Hitze, doch hält ihr inneres "
+"Feuer die Draken auch in einem recht kalten Klima am Leben. In Folge dessen "
+"war es ihnen sogar möglich, einige Gebirge im fernen und eisigen Norden des "
+"Großen Kontinents zu bevölkern."
 
 #. [race]: id=dwarf
 #: data/core/units.cfg:90
