--- a/po/wesnoth-sotbe/de.po
+++ b/po/wesnoth-sotbe/de.po
@@ -1995,7 +1995,7 @@ msgstr "Ihr Trolle seid einfach krank!"
 #. [message]: speaker=Grüü
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/07_The_Desert_of_Death.cfg:267
 msgid "<i>Yuck</i>! Disgusting! These things taste horrible!"
-msgstr "<I>Spuck</i>! Pfui Deibel! Diese Dinger schrecklich schmecken!"
+msgstr "<i>Spuck</i>! Pfui Deibel! Diese Dinger schrecklich schmecken!"
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/07_The_Desert_of_Death.cfg:272
