Dutch translation fixes for problems found by posieve

--- a/po/wesnoth-utbs/nl.po
+++ b/po/wesnoth-utbs/nl.po
@@ -15982,9 +15982,7 @@ msgstr ""
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Shyde.cfg:39
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Star.cfg:47
 msgid "SPECIAL_NOTE^ This unit can fly across any terrain except deep water."
-msgstr ""
-"SPECIAL_NOTE^ Deze eenheid kan over elk terrein uitgezonderd diep water "
-"vliegen."
+msgstr " Deze eenheid kan over elk terrein uitgezonderd diep water vliegen."
 
 #. [attack]: type=impact
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Shyde.cfg:45
@@ -16019,8 +16017,8 @@ msgstr ""
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Star.cfg:47
 msgid "SPECIAL_NOTE^ It also gains a 10% bonus to resistance from all attacks."
 msgstr ""
-"SPECIAL_NOTE^ Deze eenheid verkrijgt bovendien een bonus van 10% weerstand "
-"tegen alle aanvallen."
+" Deze eenheid verkrijgt bovendien een bonus van 10% weerstand tegen alle "
+"aanvallen."
 
 #. [unit_type]: id=Divine Avatar, race=elf
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Divine_Avatar.cfg:4
@@ -16641,8 +16639,8 @@ msgid ""
 "SPECIAL_NOTE^ Unlike normal Nightgaunts, Ethereal Nightgaunts cannot hide at "
 "night."
 msgstr ""
-"SPECIAL_NOTE^ In tegenstelling tot normale Nacht-Ondingen, kunnen Etherische "
-"Nacht-Ondingen zich 's nachts niet verschuilen."
+" In tegenstelling tot normale Nacht-Ondingen, kunnen Etherische Nacht-"
+"Ondingen zich 's nachts niet verschuilen."
 
 #. [unit_type]: id=ENightgaunt
 #: data/campaigns/Under_the_Burning_Suns/units/undead/Ethereal_Nightgaunt.cfg:14
@@ -16668,8 +16666,8 @@ msgstr "Etherische Schaduw"
 msgid ""
 "SPECIAL_NOTE^ Unlike normal Shadows, Ethereal Shadows cannot hide at night."
 msgstr ""
-"SPECIAL_NOTE^ In tegenstelling tot normale Schaduwen, kunnen Etherische "
-"Schaduwen zich 's nachts niet verschuilen."
+" In tegenstelling tot normale Schaduwen, kunnen Etherische Schaduwen zich 's "
+"nachts niet verschuilen."
 
 #. [unit_type]: id=EShadow
 #: data/campaigns/Under_the_Burning_Suns/units/undead/Ethereal_Shadow.cfg:17
