--- a/po/wesnoth-units/ko.po
+++ b/po/wesnoth-units/ko.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.1.1+svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-07 17:23+0100\n"
-"PO-Revision-Date: 2011-11-14 21:32+0900\n"
+"PO-Revision-Date: 2011-12-13 13:23+0900\n"
 "Last-Translator: mistzone <drier22@gmail.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -1028,8 +1028,8 @@ msgid ""
 "brethren lost earlier in the battle. Although not so base in design, it is "
 "not at all inaccurate."
 msgstr ""
-"엘프 '복수자'라는 이 신기한 이름은 이 달인급의 레인저들이 자주 채택하는 전술"
-"에서 유래하였다. 적이 거짓 방어선을 돌파하면 최전방의 뒤에 있던 취약한 부대"
+"엘프 '복수자'라는 이 신기한 이름은 이들 달인급의 레인저들이 자주 채택하는 전"
+"술에서 유래하였다. 적이 거짓 방어선을 돌파하면 최전방의 뒤에 있던 취약한 부대"
 "가 뒤따라오게 된다. 이 때 이 궁사들이 은신을 풀고 공격해서, 보급선을 끊고 적"
 "을 포위하여 일망타진한다.\n"
 "\n"
@@ -1589,12 +1589,12 @@ msgstr ""
 "그 누구도 어떻게 늑대들을 길들여서 타는 것이 현실화되었는지 알지 못하지만, 이"
 "것이 고블린들에게 준 이득은 명백하다. 고블린들은 오크 동족들에 비해 작고 훨"
 "씬 약하며, 싸움에서 가장 위험하고 꺼려지는 임무를 맡는 일이 흔하다. 하지만 늑"
-"대를 타는데 성공한 이들은 전투에서 훨씬 안전하고 아마도 더 재미있는 역할을 맡"
-"게 된다.\n"
+"대를 타는데 성공한 이들은 전투에서 훨씬 안전하고 어찌 말하면 더 재미있는 역할"
+"을 맡게 된다.\n"
 "\n"
 "늑대들은 인간의 무게는 절대로 그 등판에 싣지 못할테지만 가죽 갑옷을 입은 고블"
 "린은 훨씬 싣기 쉬운 짐이다. 이 승용 동물들은 산악을 쉽게 가로지르는데서 말과"
-"는 현격한 차이를 보이지만, 역시 숲이나 물은 이들의 전진을 늦춘다."
+"는 현격한 차이를 보이지만, 숲이나 물이 이들의 전진을 늦추는건 마찬가지다."
 
 #. [unit_type]: id=Gryphon, race=gryphon
 #: data/core/units/gryphons/Gryphon.cfg:4
@@ -1608,6 +1608,9 @@ msgid ""
 "both dangerous and wary of other intelligent creatures, and thus should not "
 "be disturbed without a good reason."
 msgstr ""
+"이 거대하고 강력한 생물들은 창공의 지배자들이다. 그리폰들은 위험하며 다른 지"
+"성체들을 경계하기 때문에, 타당한 이유가 없다면 이들을 건드리지 않는 것이 좋"
+"다."
 
 #. [unit_type]: id=Gryphon Master, race=gryphon
 #: data/core/units/gryphons/Gryphon_Master.cfg:4
@@ -2042,6 +2045,7 @@ msgid ""
 "Trained at swords and crossbows, Lieutenants lead small groups of human "
 "soldiers, coordinating their attacks."
 msgstr ""
+"검과 석궁 훈련을 받은 중위들은 소규모 인간 병사들을 지휘하며 공격을 지원한다."
 
 #. [unit_type]: id=Longbowman, race=human
 #: data/core/units/humans/Loyalist_Longbowman.cfg:4
@@ -2057,6 +2061,10 @@ msgid ""
 "carry their weapons as a badge of pride, and most bowmen look forward to the "
 "day they can begin using one."
 msgstr ""
+"장궁은 무서운 무기이지만, 초보 궁사들이 쓰기에는 매우 힘든 무기이기도 하다. "
+"이 활의 시위를 당기려면 강한 근력이 필요하며, 힘이 있다해도 제대로 겨냥하지 "
+"못하면 강화된 사거리와 위력은 아무 쓸모가 없다. 장궁병들은 이 무기를 자부심"
+"의 상징으로 삼으며, 대다수의 궁병들은 이것을 손에 쥘 날을 꿈꾼다."
 
 #. [unit_type]: id=Master Bowman, race=human
 #: data/core/units/humans/Loyalist_Master_Bowman.cfg:4
@@ -2296,6 +2304,9 @@ msgid ""
 "wearying years of battle. Nevertheless they remain feared on the battlefield "
 "on account of their powerful lightning bolts."
 msgstr ""
+"한때는 위대했던 존재들인 원로 마법사들은 전장에서 보낸 세월에 지쳐 그 힘이 조"
+"금 약해졌다. 그럼에도 불구하고 이들은 여전히 강력한 번개의 힘으로 전장에 공포"
+"를 안겨준다."
 
 #. [attack]: type=fire
 #: data/core/units/humans/Mage_Elder.cfg:35
@@ -2875,6 +2886,8 @@ msgid ""
 "Skilled denizens of the sea, Mermen are powerful and quick in any watery "
 "environment, but lose most of their mobility on land."
 msgstr ""
+"바다에 익숙한 이들인 인어들은 수역에서는 강력하고 빠르지만, 지상에서는 대부분"
+"의 기동력을 잃는다."
 
 #. [unit_type]: id=Merman Hoplite, race=merman
 #: data/core/units/merfolk/Hoplite.cfg:4
@@ -2907,6 +2920,9 @@ msgid ""
 "of need, many mermen of that occupation will volunteer to swell the ranks of "
 "their military."
 msgstr ""
+"인어들이 쓰는 작살 어획술은 전쟁, 특히 물에서 살지 않는 이들에게도 쉽게 쓰일 "
+"수 있다. 필요한 때가 오면 이런 직업을 가진 많은 인어들이 군단의 일원으로 지원"
+"한다."
 
 #. [unit_type]: id=Mermaid Initiate, race=merman
 #: data/core/units/merfolk/Initiate.cfg:4
@@ -2943,6 +2959,10 @@ msgid ""
 "range, the impact of one is considerably greater. In the water, the mobility "
 "of the mermen more than makes up for this when facing foes who cannot swim."
 msgstr ""
+"투창술에 통달한 인어들은 투창으로 거의 궁사에 육박하는 위력을 발휘한다 — 비"
+"록 무기의 무게 때문에 사거리는 제한되지만, 그 타격력은 그만큼 더 강해진다. 수"
+"중에서 수영하지 못하는 적들을 상대할 때면 인어들의 기동력으로 그 위력은 더욱 "
+"빛을 발한다."
 
 #. [unit_type]: id=Merman Netcaster, race=merman
 #: data/core/units/merfolk/Netcaster.cfg:4
@@ -3115,6 +3135,14 @@ msgid ""
 "Battling a dragon is said to be the pinnacle of danger itself, fit only for "
 "fools, or the bravest of knights."
 msgstr ""
+"드래곤은 보통 환상 이야기에나 나오는 전설의 생물이다. 이들은 매우 희귀하여, "
+"이 생물들이 단독으로 도시나 마을을 파괴했던 역사적인 사건들이 없었다면 이들"
+"은 그저 신화적인 존재에 불과한 것으로 여겨졌을 것이다. 전설에서는 드래곤의 파"
+"괴적인 면을 특히 강조하면서 강력한 힘과 속도, 이들의 초자연적인 지능과 그 무"
+"엇보다도 이들의 내부에서 불타오르는 강력한 화염에 대해서 언급한다.\n"
+"\n"
+"드래곤과의 싸움은 멍청이들이나 가장 용감한 기사들에게나 어울리는 위험의 정점"
+"으로 여겨진다."
 
 #. [attack]: type=blade
 #: data/core/units/monsters/Fire_Dragon.cfg:31
